Básico do CSS com material e exercícios

--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <main>
-        <section>
-            <h1>Teste H1 salvando</h1>
+        <section id="product-overview">
+            <h1>Teste H1 salvando de novo</h1>
         </section>
-        <section>
-            <h1>Repetido</h1>
+        <section id="plans">
+            <h1 class="section-title">Repetido</h1>
+            <p>Teste de parágrafo com fonte do body</p>
         </section>
     </main>
 </body>
