Ajustes de layout com inline-block

--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <header class="main-header">
+        <div>
+            <a href="index.html">
+                uHost
+            </a>
+        </div>
+        <nav>
+            <ul>
+                <li class="main-nav__item">
+                    <a href="packages/index.html">Packages</a>
+                </li>
+                <li class="main-nav__item">
+                    <a href="customer/index.html">Customer</a>
+                </li>
+                <li class="main-nav__item">
+                    <a href="start-hosting/index.html">Start Hosting</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <section id="product-overview">
             <h1>Teste H1 salvando de novo</h1>
